feat: :sparkles: Add response fields
